fixed close button on mobile

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -76,30 +76,6 @@
   border-radius: rem-calc(8);
 }
 
-.weird-button{
-  margin-top: 1rem;
-  border-radius: 3% 42% 18% 38%;
-  box-shadow: 0px 0 4px rgba(black, 0.25);
-}
-
 .close-button{
   color: white;
-}
-
-.super-round{
-  box-shadow: 0px 0px 2px #333;
-  position: relative;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  color: white;
-  font-size: rem-calc(22);
-  border: 8px solid white;
-  span.text{
-    position: absolute;
-    top: 50%;
-    -ms-tranform:      translate3d(-50%, -50%, 0);
-    -webkit-transform: translate3d(-50%, -50%, 0);
-    transform:         translate3d(-50%, -50%, 0);
-  }
 }
